# solana-program-library

./: Cargo.toml  test.txt
associated-token-account/program/: Cargo.toml
associated-token-account/program-test/: Cargo.toml
associated-token-account/program-test/tests/: spl_token_create.rs
libraries/program-interface/: Cargo.toml
libraries/program-interface/derive/: Cargo.toml
libraries/program-interface/derive/src/: lib.rs
libraries/program-interface/src/: lib.rs
libraries/program-interface/syn/: Cargo.toml
libraries/program-interface/syn/src/: error.rs  instructions.rs  interface.rs  lib.rs
libraries/program-interface/tests/: mod.rs
memo/js/functions/: createMemoInstruction.html
memo/js/variables/: MEMO_PROGRAM_ID.html
stake-pool/cli/src/: main.rs
stake-pool/program/: Cargo.toml
stake-pool/program/src/: error.rs
token-collection/program/: Cargo.toml
token-group/example/: Cargo.toml
token-metadata/example/: Cargo.toml
token-swap/program/src/: processor.rs
token-upgrade/cli/: Cargo.toml
token-wrap/program/: Cargo.toml
token/cli/: Cargo.toml
token/client/: Cargo.toml
token/client/src/: client.rs  token.rs
token/js/cli/: token-test.js
token/js/client/: token.js
token/program-2022/: Cargo.toml
token/program-2022-test/: Cargo.toml
token/program-2022/src/: processor.rs
token/transfer-hook-example/src/: instruction.rs  lib.rs  processor.rs  state.rs
token/transfer-hook-interface/: Cargo.toml
token/transfer-hook-interface/src/: error.rs  invoke.rs  lib.rs  offchain.rs
token/transfer-hook/cli/: Cargo.toml
(+8 files in other folders)
