[package]
name = "spl-program-interface-syn"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.59"
quote = "1.0"
solana-program = "1.14.12"
spl-token-metadata-interface = { version = "0.1.0", path = "../../../token-metadata/interface" }
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0.40"